

==============================
Release 2.6.1.0
==============================
2016-02-13    Adjust mouse_event signatur used in the MouseEx which causes the visual studio debugger to crash


==============================
Release 2.6.0.0
==============================
2015-12-24    Update 3rdParty libraries to have it stand-alone
2015-12-23    Remove mouse move in the ColorDetector
              Add different overloads for GetColor
              Fix wrong WinApi call for typing a single key using the KeyboardEx
              Add missing methods to the KeyboardEx
              Add SelectedText property to the BasicEdit
2015-12-22    The MouseEx now can set the current cursor position either instantly, or from a point over a period of time
              Add PressButtons and ReleaseButtons to the MouseEx (Together with Move drag & drop can be simulated)
2015-12-21    Ready implemented the new KeyboardEx to work without the MSTest CodedUI framework running
              Nearly ready implemented the new MouseEx to work without the MSTest CodedUI framework running (Some new functionality is missing)
2015-12-16    Start bring CodedUI stand alone. Target is to be able to let it run with Visual Studio 2015 Professional or lower
              MouseEx: Emulate click and doubleclick with specific mouse buttons without the MSTest CodedUI framework running


==============================
Release 2.4.2.X
==============================
2015-04-08    WindowFinder: Add possibility to find a window by its automation ID


==============================
Release 2.4.1.X
==============================
2015-03-27    LogWriter: Add possibility to let log files be written instantly when an action happen
2015-03-22    LogWriter: Add some settings how exactly the log line should be formatted


==============================
Release 2.4.0.X
==============================
2015-02-20    CodedUIEnvironment: The listener was not configurable